<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@color/darkBackground"

    tools:context="fm.kcou.kcoumizzoustream.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:clipChildren="false"
        android:clipToPadding="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        android:id="@+id/topBlock"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleX="1"
            android:scaleY="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/app_icon_foreground"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/streamType"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
            android:contentDescription="@string/kcou_logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="A"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="56sp"-->

                <!--android:textStyle="bold"/>-->

            <Switch
                android:id="@+id/stream_switch"
                android:layout_margin="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showText="true"
                android:thumbTint="@color/colorPrimary"
                android:switchTextAppearance="@style/thumbText"
                android:track="@drawable/switch_track"
                android:thumb="@drawable/switch_thumb"

                android:textOff="@string/a"
                android:textOn="@string/b"
                tools:targetApi="m" />

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="B"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="56sp"-->

                <!--android:textStyle="bold"/>-->

        </LinearLayout>

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="false"
            android:background="@drawable/ic_play_arrow_white_24dp"
            android:onClick="playPauseStream"
            android:padding="16dp"
            android:scaleType="fitCenter"

            android:scaleX=".75"
            android:scaleY=".75"
            android:layout_margin="8dp"
            android:contentDescription="@string/pause_play" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:clipChildren="false"
        android:clipToPadding="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/trackInfo"
        app:layout_constraintTop_toBottomOf="@+id/topBlock">

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/startup_message"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="italic"
            android:singleLine="true" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
